--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,5 @@
         "temp/":true,
         "Temp/":true
     },
-    "dotnet.defaultSolution": "Multiplayer Platformer.sln"
+    "dotnet.defaultSolution": "PlatformerCecelia.sln"
 }
